Bug 31364 - [r300g] CS section size missmatch start at (../../src/radeon_textured_videofuncs.c,R300PrepareTexturedVideoCP,2184) 66 vs 62
Summary: [r300g] CS section size missmatch start at (../../src/radeon_textured_videofu...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-03 13:29 UTC by Tomasz Czapiewski
Modified: 2012-12-06 17:10 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
kdm.log.gz (440.52 KB, application/x-gzip)
2010-11-03 13:29 UTC, Tomasz Czapiewski
no flags Details
dmesg (54.16 KB, text/x-log)
2010-11-03 13:30 UTC, Tomasz Czapiewski
no flags Details
Xorg.0.log (43.45 KB, text/plain)
2010-11-03 13:31 UTC, Tomasz Czapiewski
no flags Details
Possible fix (559 bytes, patch)
2010-11-04 03:41 UTC, Michel Dänzer
no flags Details | Splinter Review
fix CS count (1.31 KB, patch)
2012-12-06 14:23 UTC, Alex Deucher
no flags Details | Splinter Review

Description Tomasz Czapiewski 2010-11-03 13:29:08 UTC
Created attachment 40021 [details]
kdm.log.gz

After an hour or so (maybe less) I'm getting /var/log/kdm.log full of errors:
CS section size missmatch start at (../../src/radeon_textured_videofuncs.c,R300PrepareTexturedVideoCP,2184) 66 vs 62
CS section end at (../../src/radeon_textured_videofuncs.c,R300PrepareTexturedVideoCP,2418)

and Xorg process CPU usage gets to near 100% even or P4 with HT so KDE desktop gets almost unresponsible (wating for few seconds for almost every operation).

At system boot everything is OK - Xorg CPU usage for few percent sometimes even less, kdm.log doesn't have such errors but after some time using KDE desktop (no matter if there are KWin effects or not) the problem as described above occurs.

The problem occurs from at least commits from 2010-10-27 (I'm testing r300g from xorg-edgers/radeon ppa). I haven't noticed this problem before but before that date I've used Kubuntu 10.10 + r300g from xorg-edgers/radeon ppa booted only from pendrive for hour, maybe sometimes some more time between reboots and now I use the same configuration installed on hard disk.

libgl1-mesa-dri and glx: 7.10.0~git20101101+gallium.ad00a92e-0ubuntu0tormod
and 7.10.0~git20101027+gallium.3acc8265-0ubuntu0tormod before.

Kernel: stock *buntu 10.10 2.6.35-22-generic
Xorg: 1.9.0-0ubuntu7
libdrm2: 2.4.21-1ubuntu2.1
libdrm-radeon1: 2.4.21-1ubuntu2.1

CPU: Intel Pentium 4 32bit with HT
Graphic card: Radeon 9600 AGP (RV350) 256MB
OS: Kubuntu 10.10
Comment 1 Tomasz Czapiewski 2010-11-03 13:30:38 UTC
Created attachment 40022 [details]
dmesg
Comment 2 Tomasz Czapiewski 2010-11-03 13:31:15 UTC
Created attachment 40023 [details]
Xorg.0.log
Comment 3 Tomasz Czapiewski 2010-11-03 13:33:18 UTC
And the kernel is stock *buntu but with one module (drm_kms_helper) patched for parameter to disable poll with kernel parameter:
drm_kms_helper.poll=0
Comment 4 Michel Dänzer 2010-11-04 03:40:37 UTC
This is an X driver XVideo bug.
Comment 5 Michel Dänzer 2010-11-04 03:41:35 UTC
Created attachment 40038 [details] [review]
Possible fix

Does this patch fix the problem?
Comment 6 Tomasz Czapiewski 2010-11-04 12:59:33 UTC
(In reply to comment #5)
> Created an attachment (id=40038) [details]
> Possible fix
> 
> Does this patch fix the problem?

Thanks Michel!

So far so good. I've tried to reproduce this error by using watching analog TV with video output through Xv, enabling/disabling KWin desktop effects, moving and resizing TV window (even with transparency), using web browser with flash etc... on a xserver-xorg-video-ati driver (the same version as before but recompiled with yours patch).
I think the problem is gone now - it's mostly visible by looking at CPU temperature graph (back to normal 55-58 degrees in Celcius scale, with this error it didn't go lower than 60, mostly 65-69 degrees) and no more errors in /var/log/kdm.log.

The version of xserver-xorg-video-ati and -radeon I've had was:
6.13.2+git20101020.51f26a7f-0ubuntu0tormod
Comment 7 Tomasz Czapiewski 2010-11-04 13:52:28 UTC
After almost three hours of testing the problem did not appeared anymore with patched driver, so the patch indeed fixed the problem.
Comment 8 Michel Dänzer 2010-11-05 01:46:15 UTC
Fix pushed as commit 0c2834e67df6e143a7d15f373faaddca1dda6b18, thanks for testing.
Comment 9 nopicnic 2012-12-06 01:43:40 UTC
even if this bug seems solved and closed for more than a year, since I updated to last x11-drivers/xf86-video-ati-7.0.0, I have hundered of thousand of lines like that in my logs :
CS section end at (/var/tmp/portage/x11-drivers/xf86-video-ati-7.0.0/work/xf86-video-ati-7.0.0/src/radeon_textured_videofuncs.c,R300PrepareTexturedVideo,2147)
CS section size missmatch start at (/var/tmp/portage/x11-drivers/xf86-video-ati-7.0.0/work/xf86-video-ati-7.0.0/src/radeon_textured_videofuncs.c,R300PrepareTexturedVideo,1689) 33 vs 66

I'm using gentoo on a amd64 arch. I know it's not the same arch the bug was opened for, but the error messages look really alike...

let me know if you need more details on my setup, or if I have to open a new bug

regards
pierre
Comment 10 Alex Deucher 2012-12-06 14:23:24 UTC
Created attachment 71087 [details] [review]
fix CS count

The attached patch should fix the issue.
Comment 11 nopicnic 2012-12-06 17:10:22 UTC
it does
thx


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.