radeon: fix ring count in R300PrepareTexturedVideo

Fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=31364

Signed-off-by: Alex Deucher <alexdeucher@gmail.com>