src/radeon_textured_videofuncs.c
@@ -1686,7 +1686,7 @@ R300PrepareTexturedVideo(ScrnInfoPtr pScrn, RADEONPortPrivPtr pPriv)
 	}
 
 	if (pPriv->is_planar) {
-	    BEGIN_RING(2*needgamma ? 28 + 33 : 33);
+	    BEGIN_RING(2 * (needgamma ? (28 + 33) : 33));
 	    /* 2 components: same 2 for tex0/1/2 */
 	    OUT_RING_REG(R300_RS_COUNT,
 			  ((2 << R300_RS_COUNT_IT_COUNT_SHIFT) |
@@ -1910,7 +1910,7 @@ R300PrepareTexturedVideo(ScrnInfoPtr pScrn, RADEONPortPrivPtr pPriv)
 							  R300_ALU_ALPHA_SEL_C(R300_ALU_ALPHA_0_0)));
 	    }
 	} else {
-	    BEGIN_RING(2*needgamma ? 28 + 31 : 31);
+	    BEGIN_RING(2 * (needgamma ? (28 + 31) : 31));
 	    /* 2 components */
 	    OUT_RING_REG(R300_RS_COUNT,
 			  ((2 << R300_RS_COUNT_IT_COUNT_SHIFT) |
